--- a/trunk/bin/test.html
+++ b/trunk/bin/test.html
@@ -8,7 +8,7 @@
 	<meta name="keywords" content="" />
 </head>
 <style type="text/css">
-	p { font-family: sans-serif }
+	p { font-family: monospace; text-size: 11px; }
 	.s00 { color:#008000; }
 	.s01 { color:#006000; }
 	.s02 { color:#a31515; }
