--- a/trunk/bin/index_sb.html
+++ b/trunk/bin/index_sb.html
@@ -21,21 +21,21 @@
 			bgcolor: "#FFFFFF"
 		};
 		var attributes = {
-			id:"ShadowSWF"
+			id:"Shadowbox"
 		};
 		Shadowbox.loadSkin('classic', 'js/src/skin'); // use the "classic" skin
 		Shadowbox.loadLanguage('en', 'js/build/lang'); // use the English language
 		Shadowbox.loadPlayer(['img', 'qt'], 'js/build/player'); // use img and qt players
 		window.onload = Shadowbox.init;
 		
-		function testSB(){
-		Shadowbox.open({
-        player:     'img',
-        title:      'Welcome',
-        content:    'test.jpg',
-        height:     350,
-        width:      350});
-		}
+		//function testSB(){
+		//Shadowbox.open({
+        //player:     'img',
+        //title:      'Welcome',
+        //content:    'test.jpg',
+        //height:     350,
+        //width:      350});
+		//}
 		swfobject.embedSWF("Shadowbox.swf", "altContent", "100%", "100%", "9.0.0", "expressInstall.swf", flashvars, params, attributes);
 	</script>
 	<style>
