--- a/examples/rsx/index.html
+++ b/examples/rsx/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
-	<title>MappingExample</title>
+	<title>@swf@</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="language" content="en" />
 	<meta name="description" content="" />
@@ -19,9 +19,9 @@
 			bgcolor: "#FFFFFF"
 		};
 		var attributes = {
-			id:"MappingExample"
+			id:"@swf@"
 		};
-		swfobject.embedSWF("MappingExample.swf", "altContent", "100%", "100%", "9.0.0", "expressInstall.swf", flashvars, params, attributes);
+		swfobject.embedSWF("@swf@.swf", "altContent", "100%", "100%", "9.0.0", "expressInstall.swf", flashvars, params, attributes);
 	</script>
 	<style>
 		html, body { height:100%; }
@@ -30,7 +30,7 @@
 </head>
 <body>
 	<div id="altContent">
-		<h1>MappingExample</h1>
+		<h1>@swf@</h1>
 		<p>Alternative content</p>
 		<p><a href="http://www.adobe.com/go/getflashplayer"><img 
 			src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" 
